# leaf

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  installedPackage.md  packageListFormat.md  packages.list  prepare_static.sh  prepare_tests.sh
.github/workflows/: cmake_dev.yml  cmake_main.yml
cleaf/: CMakeLists.txt  template.txt
cleaf/include/: cleaf.h  cleaf_check.h  cleafconfig.h  cleafcore.h  cleafdebug.h  loglevels.h
cleaf/src/: cleaf_assert.cpp
cleaf/src/cleaf/: cleaf.cpp  cleaf_pkgs_to_v.cpp
cleaf/src/cleafconfig/: cleafconfig_b.cpp  cleafconfig_redownload.cpp  cleafconfig_s.cpp
cleaf/src/cleafcore/: alloc.cpp  cleafcore_a_install.cpp  cleafcore_a_installLocal.cpp  cleafcore_a_listInstalled.cpp  cleafcore_a_remove.cpp  cleafcore_a_update.cpp  cleafcore_a_upgrade.cpp  error.cpp
cleaf/src/cleafdebug/: cleafdebug.cpp
cleaf/tests/: CMakeLists.txt
cleaf/tests/include/: checks.h  fails.h
cleaf/tests/tests/Cleaf/: CMakeLists.txt  t_cleaf.h
cleaf/tests/tests/Cleaf/src/: t_cleaf_abort.cpp  t_cleaf_finalize.cpp  t_cleaf_init.cpp  t_cleaf_log.cpp  t_cleaf_pkgs_to_v.cpp  t_cleaf_version.cpp
cleaf/tests/tests/Cleafconfig/: CMakeLists.txt  t_cleafconfig.h
cleaf/tests/tests/Cleafconfig/src/: t_cleafconfig_b.cpp  t_cleafconfig_redownload.cpp  t_cleafconfig_s.cpp
cleaf/tests/tests/Cleafcore/: CMakeLists.txt  t_cleafcore.h
cleaf/tests/tests/Cleafcore/src/: t_cleafcore_a_install.cpp  t_cleafcore_a_installLocal.cpp  t_cleafcore_a_installUpgrade.cpp  t_cleafcore_a_listInstalled.cpp  t_cleafcore_a_remove.cpp  t_cleafcore_a_update.cpp  t_cleafcore_a_upgrade.cpp  t_cleafcore_alloc.cpp  t_cleafcore_error.cpp
docs/: CMakeLists.txt
include/: arguments.h  file.h  leafdb.h  options.h  package.h
leafcore/: CMakeLists.txt  codenames.txt
leafcore/include/: branchmaster.h  config.h  configparser.h  dist.h  downloader.h  error.h  fail.h  file.h  globals.h  hook.h  leafarchive.h  leafconfig.h  leafcore.h  leafdb.h  leafdebug.h  leaffs.h  leafpkg.h  leafpkgparser.h  md5.h  mirror.h  package.h  parser.h  pkglistparser.h  util.h
leafcore/src/: template.cpp
leafcore/src/branchmaster/: getECString.cpp  parseEC.cpp
leafcore/src/config/: config.cpp  parse_config.cpp
leafcore/src/configparser/: configparser.cpp  get.cpp  parse.cpp
leafcore/src/downloader/: download.cpp  downloader.cpp  getSet.cpp  init.cpp
leafcore/src/error/: getErrorCodeMessage.cpp  leaferror.cpp
leafcore/src/fail/: fail.cpp
leafcore/src/file/: file.cpp  getSet.cpp
leafcore/src/hook/: apply.cpp  checkAction.cpp  checkPackage.cpp  exec.cpp  execPost.cpp  execPre.cpp  getSet.cpp  hook.cpp  parse.cpp  shouldEngage.cpp
leafcore/src/leafarchive/: copy_data.cpp  extract.cpp  getSet.cpp  leafarchive.cpp  load.cpp
leafcore/src/leafcore/: a_install.cpp  a_installLocal.cpp  a_listInstalled.cpp  a_remove.cpp  a_update.cpp  a_upgrade.cpp  actions.cpp  askUserOK.cpp  checkDirectories.cpp  check_pkg_hashes.cpp  copyDataToRoot.cpp  createCacheDirs.cpp  createConfigDirs.cpp  download_packages.cpp  getBranchMasterECString.cpp  getSet.cpp  install_packages.cpp  leafcore.cpp  parseConfig.cpp  parseHooks.cpp  parseInstalled.cpp  parsePackageList.cpp  parsers.cpp  runCommand.cpp
leafcore/src/leafdb/: addPackage.cpp  findFileProviders.cpp  getPackage.cpp  getSet.cpp  leafdb.cpp  newPackage.cpp  renamePackage.cpp  resolveDependencies.cpp  resolveDependers.cpp
leafcore/src/leafdebug/: leafdebug.cpp
leafcore/src/leaffs/: check.cpp  createDir.cpp  exists.cpp  getFiles.cpp  getSet.cpp  is.cpp  leaffs.cpp  read.cpp  remove.cpp  removeFile.cpp  workdir.cpp
leafcore/src/leafpkg/: leafpkg.cpp
leafcore/src/leafpkgparser/: getSet.cpp  leafpkgparser.cpp
leafcore/src/md5/: md5.cpp
leafcore/src/mirror/: getSet.cpp  load.cpp  mirror.cpp  resolve_package.cpp  update.cpp
leafcore/src/package/: applyLeafPkg.cpp  checkFetchedHash.cpp  clearCache.cpp  copyToRoot.cpp  createInstalledFile.cpp  dependsOn.cpp  deploy.cpp  extract.cpp  fetch.cpp  getSet.cpp  indexExtracted.cpp  package.cpp  parseInstalledFile.cpp  pre_postinstall.cpp  removeDownloadCache.cpp  removeFromRoot.cpp  resolveDependentPackages.cpp
leafcore/src/parser/: getSet.cpp  parse.cpp
leafcore/src/pkglistparser/: applyToDB.cpp  getSet.cpp  parse.cpp  parseDependenciesString.cpp  pkglistparser.cpp
leafcore/src/util/: askUserOK.cpp  dependencies.cpp  dirs.cpp  parseDependenciesString.cpp  progress.cpp  runCommand.cpp  util.cpp
patches/: patch_curl.patch  patch_libarchive.patch
pyleaf/: CMakeLists.txt  leafcore.py
src/: arguments.cpp  main.cpp  parse_options.cpp
tests/: CMakeLists.txt
tests/include/: fails.h  t_common.h  testing_fs.h
tests/test_main/: CMakeLists.txt  main.cpp
tests/test_main/testing_fs/: createDir.cpp  createFile.cpp  deletePath.cpp  fileExists.cpp  fserror.cpp
tests/tests/BranchMaster/: CMakeLists.txt  t_branchmaster.h
tests/tests/BranchMaster/src/: tParseEC.cpp
tests/tests/ConfigParser/: CMakeLists.txt  t_configparser.h
tests/tests/ConfigParser/src/: tParse.cpp
tests/tests/Downloader/: CMakeLists.txt  t_downloader.h
tests/tests/Downloader/src/: tDownload.cpp  tInit.cpp
tests/tests/LeafArchive/: CMakeLists.txt  t_leafArchive.h
tests/tests/LeafArchive/src/: tExtract.cpp  tLoad.cpp
tests/tests/Leafcore/: CMakeLists.txt  t_leafcore.h
tests/tests/Leafcore/src/: tAskUserOK.cpp  tCheckDirectories.cpp  tCreateCacheDirs.cpp  tCreateConfigDirs.cpp  tParseConfig.cpp  tRunCommand.cpp
tests/tests/MD5/: CMakeLists.txt  t_md5.h
tests/tests/MD5/src/: tMD5.cpp
tests/tests/Package/: CMakeLists.txt  t_package.h
tests/tests/Package/src/: tDeploy.cpp  tFetch.cpp  tPackage.cpp  tRunScript.cpp
tests/tests/PackageListParser/: CMakeLists.txt  t_pkglistparser.h
tests/tests/PackageListParser/src/: tParse.cpp  tPkgListParser.cpp
tests/tests/Parser/: CMakeLists.txt  t_parser.h
tests/tests/Parser/src/: tGet.cpp  tParse.cpp
tests/tests/Sanity/: CMakeLists.txt
tests/tests/Sanity/src/: sanity.cpp
tests/tests/Template/: CMakeLists.txt  t_.h  t_xxx.h
tests/tests/Template/src/: t.cpp  tXXX.cpp
(+6 files in other folders)
